syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/zizdlp/zbook/pb/models";

message Session {
  string session_id                    = 1;
  int64 user_id                        = 2;
  string refresh_token                 = 3;
  string user_agent                    = 4;
  string client_ip                     = 5;
  string username                      = 6;
  google.protobuf.Timestamp expires_at = 7;
  google.protobuf.Timestamp created_at = 8;
}
message SessionInfo {
  string username                      = 1;
  string user_agent                    = 2;
  string client_ip                     = 3;
  string email                         = 4;
  google.protobuf.Timestamp expires_at = 5;
  google.protobuf.Timestamp created_at = 6;
}